--- a/ui/package.json
+++ b/ui/package.json
@@ -87,7 +87,7 @@
     "@types/single-spa-react": "^2.12.0",
     "@types/styled-components": "^5.0.1",
     "ace-builds": "^1.4.11",
-    "apexcharts": "^3.16.0",
+    "apexcharts": "^3.24.0",
     "cross-env": "^7.0.2",
     "dayjs": "^1.8.21",
     "debounce-promise": "^3.1.2",
@@ -108,7 +108,7 @@
     "react-intersection-observer": "^8.31.0",
     "react-popper": "^2.2.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.2",
     "react-select": "^3.1.0",
     "react-select-event": "^4.1.4",
     "react-svg": "^11.0.11",
